# BriLd

./: CMakeLists.txt  Makefile  README.md  main.c
elf/: elf_std.c  elf_std.h
ld/: file.c  file.h  inputfile.c  inputfile.h  objectfile.c
linker/: MergedSection.c  archive.c  archive.h  chunk.c  chunk.h  context.c  context.h  file.c  file.h  filetype.c  filetype.h  gotsection.c  input.c  input.h  inputfile.c  inputsection.c  machinetype.c  machinetype.h  merge.h  mergeableSection.c  mergedSection.h  objectfile.c  objectfile.h  output.c  output.h  outputEhdr.c  outputSection.c  outputphdr.c  outputshdr.c  passes.c  passes.h  sectionfragment.c  symbol.c  union.h
test/: hello.sh
utils/: util.c  util.h  utils.c  utils.h
